# eqsys

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
eqsys/: __init__.py  diagnostics.py  jacobian.py  solver.py  status.py  system.py  tracker.py  validator.py  var.py
tests/: test_benchmarks.py  test_diagnostics.py  test_jacobian.py  test_solver.py  test_status.py  test_system.py  test_tracker.py  test_validator.py  test_var.py
