[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eqsys"
version = "0.1.0"
description = "Nonlinear equation system solver with automatic dependency tracking"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
]
